# swagger.yaml
@@ -195,6 +195,37 @@ paths:
         '500':
           description: Internal server error
 
+  /member/auth-v2:
+    post:
+      summary: Authenticate member using membership number and phone number
+      tags:
+        - Member
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - membership_no
+                - phone_no
+              properties:
+                membership_no:
+                  type: string
+                  example: "1234"
+                phone_no:
+                  type: integer
+                  example: "9620722486"
+      responses:
+        '200':
+          description: Authentication successful
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal server error
+
   /member/dependant:
     post:
       summary: Get member dependant details
